# CPSMGestionPlongees

./: .gitignore  README.md  rewriteHistory.sh
CPSMGestionPlongees/: CMakeLists.txt  CPSMGestionPlongees.pro  global.hpp  main.cpp
CPSMGestionPlongees/DBApi/: DBAddress.cpp  DBAddress.hpp  DBApi.cpp  DBApi.hpp  DBDive.cpp  DBDive.hpp  DBDiver.cpp  DBDiver.hpp  DBDiverLevel.cpp  DBDiverLevel.hpp  DBSaver.cpp  DBSaver.hpp  DataStructs.cpp  DataStructs.hpp  Database.cpp  Database.hpp  Generic.hpp  global.cpp  local.cpp
CPSMGestionPlongees/Data/: Database.cpp  Database.hpp  global.cpp  local.cpp
CPSMGestionPlongees/DataStruct/: Address.cpp  Address.h  Dive.cpp  Dive.h  Diver.cpp  Diver.h  User.cpp  User.h  global.cpp  global.hpp
CPSMGestionPlongees/Debug/: DbVisualizer.cpp  DbVisualizer.h  DbVisualizer.ui  LogFile.cpp  LogFile.hpp  ScopeTimer.cpp  ScopeTimer.hpp  Utils.cpp  Utils.h  global.cpp  global.hpp
CPSMGestionPlongees/GUI/: Dialog_ConfirmDiveDeletion.cpp  Dialog_ConfirmDiveDeletion.hpp  Dialog_ConfirmDiveDeletion.ui  Dialog_ConfirmDiverDeletion.cpp  Dialog_ConfirmDiverDeletion.h  Dialog_ConfirmDiverDeletion.ui  Dialog_EditFamily.cpp  Dialog_EditFamily.h  Dialog_EditFamily.ui  DiveEdit.cpp  DiveEdit.h  DiveEdit.ui  DiveMembersEditor.cpp  DiveMembersEditor.hpp  global.cpp  (+16 more)
CPSMGestionPlongees/GenericSettings/: CMakeLists.txt  GenericSettings.hpp
CPSMGestionPlongees/GenericSettings/src/: BaseSetting.cpp  BaseSetting.hpp  JSONTools.cpp  JSONTools.hpp  SettingsManager.cpp  SettingsManager.hpp
DevTools/: buildSetup.iss  deploy.bat  deploy.py
UML/: database.uxf
(+21 files in other folders)
